--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Language" content="pt-br">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/specifications.js"></script>
@@ -14,8 +15,9 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
     <link type="text/css" rel="stylesheet" href="css/normalize.css"/>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <title>Cenário - Visualizando o Cinema no Brasil</title>
   </head>
-  <body>
+  <body lang="pt-BR">
 
     <div class="menu-container">
       <nav class="menu">
@@ -99,8 +101,8 @@
         d3.selectAll("div#word-cloud").remove();
         d3.select("div.about-page").remove();
         d3.select("svg").classed("hidden", false);
+        clearInterval(visConfig.animationTimer);
         visualSelection(reference);
-        deleteVis();
         newVis(userWindowWidth);
         resizeFun = newVis;
       }
@@ -126,6 +128,15 @@
       });
 
 
+    </script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-87914413-1', 'auto');
+      ga('send', 'pageview');
     </script>
   </body>
 </html>
